[EM-6] fix dockerfile